--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+<resources>
     <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!--액션바 배경색-->
         <item name="colorPrimary">@color/white</item>
@@ -7,11 +6,7 @@
         <item name="colorOnPrimary">@color/white</item>
         <!--커서색, 드래그 하이트라이트색, EditText 밑줄색-->
         <item name="colorAccent">@color/black</item>
-
-        <!--전체 배경색-->
         <item name="android:windowBackground">@android:color/white</item>
-
-        <!--전체 글자색-->
         <item name="android:textColor">@android:color/black</item>
     </style>
 
