--- a/app/src/main/res/layout/second_tab_fragment.xml
+++ b/app/src/main/res/layout/second_tab_fragment.xml
@@ -6,7 +6,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        theWarsOfStar:context=".ui.secondTab.SecondTabFragment">
+        theWarsOfStar:context=".ui.secondTab.MyLockerFragment">
 
         <TextView
             android:id="@+id/tv_title"
