--- a/app/src/main/res/layout/item_image.xml
+++ b/app/src/main/res/layout/item_image.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
             name="imageItem"
@@ -20,7 +19,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toStartOf="@id/tvDate"
             app:layout_constraintStart_toStartOf="parent"
-            tools:src="@mipmap/ic_launcher" />
+            setImage="@{imageItem.thumbnailUrl}" />
 
         <TextView
             android:id="@+id/tvDate"
@@ -32,12 +31,13 @@
             app:layout_constraintEnd_toStartOf="@id/ivFavorite"
             app:layout_constraintTop_toTopOf="@id/ivThumbnail"
             app:layout_constraintStart_toEndOf="@id/ivThumbnail"
-            tools:text="textDate" />
+            setText="@{imageItem.date}" />
 
         <CheckBox
             android:id="@+id/ivFavorite"
             android:layout_width="0dp"
             android:layout_height="@dimen/itemImageHeight"
+            android:checked="@{imageItem.favorite}"
             app:layout_constraintHorizontal_weight="2.5"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintTop_toTopOf="@id/ivThumbnail"
