--- a/app/src/main/res/layout/item_image.xml
+++ b/app/src/main/res/layout/item_image.xml
@@ -31,7 +31,7 @@
             app:layout_constraintEnd_toStartOf="@id/ivFavorite"
             app:layout_constraintTop_toTopOf="@id/ivThumbnail"
             app:layout_constraintStart_toEndOf="@id/ivThumbnail"
-            setText="@{imageItem.date}" />
+            setText="@{imageItem.dateTime}" />
 
         <CheckBox
             android:id="@+id/ivFavorite"
