시간 표시 완료 및 ui정리

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,5 +3,6 @@
     <dimen name="searchHeight">50dp</dimen>
     <dimen name="contentHorizontalPadding">20dp</dimen>
     <dimen name="searchPadding">10dp</dimen>
-    <dimen name="itemImageHeight">50dp</dimen>
+    <dimen name="itemImageHeight">100dp</dimen>
+    <dimen name="itemDateTimeHeight">50dp</dimen>
 </resources>
