--- a/app/src/main/res/layout/item_image.xml
+++ b/app/src/main/res/layout/item_image.xml
@@ -14,36 +14,47 @@
             android:id="@+id/ivThumbnail"
             android:layout_width="0dp"
             android:layout_height="@dimen/itemImageHeight"
-            app:layout_constraintHorizontal_weight="2.5"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toStartOf="@id/tvDate"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/tvTime"
             setImage="@{imageItem.thumbnailUrl}" />
 
         <TextView
             android:id="@+id/tvDate"
             android:layout_width="0dp"
-            android:layout_height="@dimen/itemImageHeight"
+            android:layout_height="@dimen/itemDateTimeHeight"
             android:gravity="center_vertical"
             android:padding="@dimen/searchPadding"
-            app:layout_constraintHorizontal_weight="5"
             app:layout_constraintEnd_toStartOf="@id/ivFavorite"
             app:layout_constraintTop_toTopOf="@id/ivThumbnail"
             app:layout_constraintStart_toEndOf="@id/ivThumbnail"
-            setText="@{imageItem.dateTime}" />
+            app:layout_constraintBottom_toTopOf="@id/tvTime"
+            setText="@{imageItem.date}" />
+
+        <TextView
+            android:id="@+id/tvTime"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/itemDateTimeHeight"
+            android:gravity="center_vertical"
+            android:padding="@dimen/searchPadding"
+            app:layout_constraintTop_toBottomOf="@id/tvDate"
+            app:layout_constraintStart_toStartOf="@id/tvDate"
+            app:layout_constraintEnd_toEndOf="@id/tvDate"
+            app:layout_constraintBottom_toBottomOf="@id/ivThumbnail"
+            setText="@{imageItem.time}" />
 
         <CheckBox
             android:id="@+id/ivFavorite"
             android:layout_width="0dp"
-            android:layout_height="@dimen/itemImageHeight"
-            android:checked="@{imageItem.favorite}"
-            app:layout_constraintHorizontal_weight="2.5"
+            android:layout_height="wrap_content"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintTop_toTopOf="@id/ivThumbnail"
             app:layout_constraintBottom_toBottomOf="@id/ivThumbnail"
             app:layout_constraintStart_toEndOf="@id/tvDate"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            android:checked="@{imageItem.favorite}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
