--- a/app/src/main/res/layout/item_image.xml
+++ b/app/src/main/res/layout/item_image.xml
@@ -27,7 +27,7 @@
             android:layout_height="@dimen/itemDateTimeHeight"
             android:gravity="center_vertical"
             android:padding="@dimen/searchPadding"
-            app:layout_constraintEnd_toStartOf="@id/ivFavorite"
+            app:layout_constraintEnd_toStartOf="@id/checkBox"
             app:layout_constraintTop_toTopOf="@id/ivThumbnail"
             app:layout_constraintStart_toEndOf="@id/ivThumbnail"
             app:layout_constraintBottom_toTopOf="@id/tvTime"
@@ -46,7 +46,7 @@
             setText="@{imageItem.time}" />
 
         <CheckBox
-            android:id="@+id/ivFavorite"
+            android:id="@+id/checkBox"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintDimensionRatio="1:1"
