--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,14 +6,14 @@
         <item name="colorOnPrimary">@color/white</item>
         <!--커서색, 드래그 하이트라이트색, EditText 밑줄색-->
         <item name="colorAccent">@color/black</item>
-        <item name="android:windowBackground">@android:color/white</item>
+        <item name="android:windowBackground">@color/white</item>
         <item name="android:textColor">@android:color/black</item>
     </style>
 
-    <style name="TabLayoutTextStyle">
-        <item name="android:textSize">14sp</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:textColor">#CCCC</item>
+    <style name="CustomEditTextStyle" parent="Widget.AppCompat.EditText">
+        <item name="android:backgroundTint">@color/black</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textColorHint">#CCCC</item>
     </style>
 
 </resources>
