패키지명 변경 및 원샷 호출에 따른 스트림 적용

--- a/app/src/main/res/layout/item_image.xml
+++ b/app/src/main/res/layout/item_image.xml
@@ -3,7 +3,7 @@
     <data>
         <variable
             name="imageItem"
-            type="com.example.kakao.uilayer.model.ItemImageUiState" />
+            type="com.example.kakao.ui.model.SearchResultItem" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout 
         xmlns:android="http://schemas.android.com/apk/res/android"
