--- a/app/src/main/res/layout/item_image.xml
+++ b/app/src/main/res/layout/item_image.xml
@@ -14,11 +14,11 @@
             android:id="@+id/ivThumbnail"
             android:layout_width="0dp"
             android:layout_height="@dimen/itemImageHeight"
+            android:layout_marginTop="@dimen/contentHorizontalPadding"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toStartOf="@id/tvDate"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="@id/tvTime"
             setImage="@{imageItem.thumbnailUrl}" />
 
         <TextView
@@ -57,5 +57,14 @@
             android:buttonTint="@color/black"
             android:checked="@{imageItem.favorite}" />
 
+        <View
+            android:id="@+id/v_devinder"
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:background="@color/grey"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="@dimen/contentHorizontalPadding"
+            app:layout_constraintTop_toBottomOf="@id/ivThumbnail"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
