리팩토링 및 검색결과 리스트 없는 화면 제작

--- a/app/src/main/res/layout/my_locker_fragment.xml
+++ b/app/src/main/res/layout/my_locker_fragment.xml
@@ -26,7 +26,19 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             tools:listitem="@layout/item_search_result"
-            submitImageData="@{lockerVm.uiState}"/>
+            submitListData="@{lockerVm.uiState}"/>
+
+        <TextView
+            android:id="@+id/tvNoContents"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:gravity="center"
+            android:text="@string/noSaveContents"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            setListDataVisibility="@{lockerVm.uiState}"
+            isListDataVisibilityReverse="@{true}"
+            />
 
         <ProgressBar
             android:id="@+id/loadingBar"
