--- a/app/src/main/res/layout/item_search_result.xml
+++ b/app/src/main/res/layout/item_search_result.xml
@@ -3,7 +3,7 @@
     <data>
         <variable
             name="searchItem"
-            type="com.example.kakao.ui.model.SearchResultItem" />
+            type="com.example.architecture.ui.model.SearchResultItem" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout 
         xmlns:android="http://schemas.android.com/apk/res/android"
